Several small changes to 1) copy 2) email signatures 3) logging 4) blog create error handling and that is all

--- a/app/views/mailer/_buyer_lead_notification.haml
+++ b/app/views/mailer/_buyer_lead_notification.haml
@@ -1,4 +1,4 @@
-%strong= "Salesforce Lead ID - #{@seller_listing.salesforce_lead_id}"
+%strong= "Lead ID - #{@seller_listing.salesforce_lead_id}"
 
 %h2{:style => 'margin-top:20px'} Home Seller Information
 %table{:cellspacing => '3', :cellpadding => '0', :border => '0', :style => 'margin-left:10px'}
