--- a/app/views/mailer/buyer_lead_notification.text.haml
+++ b/app/views/mailer/buyer_lead_notification.text.haml
@@ -1,7 +1,7 @@
 :ruby
   addr = @seller_listing.user.addresses.primary
 
-= "Salesforce Lead ID - #{@seller_listing.salesforce_lead_id}"
+= "Lead ID - #{@seller_listing.salesforce_lead_id}"
 = ""
 Home Seller Information
 = "    First:   #{@seller_listing.user.first_name}"
