--- a/app/views/mailer/new_seller_affiliate_services.html.haml
+++ b/app/views/mailer/new_seller_affiliate_services.html.haml
@@ -1,2 +1,2 @@
 - body = render :partial => 'new_seller_affiliate_services'
-= render :partial => 'mailer/layouts/html_template', :locals => {:body => body, :closing => 'All the best,', :from => 'Chris Richter'}
+= render :partial => 'mailer/layouts/html_template', :locals => {:body => body, :closing => 'Best Regards,', :from => 'Chris Richter'}
