--- a/app/views/mailer/new_seller_affiliate_services.text.haml
+++ b/app/views/mailer/new_seller_affiliate_services.text.haml
@@ -23,4 +23,4 @@ Whether you hire someone or do-it-yourself, we strongly recommend that you learn
 = "    * Always act in a cooperative and professional manner when dealing with creditors or collection agencies."
 = "    * Don't make threats, however subtle, if you can't back them up."
 = ''
-= render :partial => 'mailer/layouts/text_footer', :locals => {:closing => 'All the best,', :from => 'Chris Richter'}
+= render :partial => 'mailer/layouts/text_footer', :locals => {:closing => 'Best Regards,', :from => 'Chris Richter'}
