--- a/app/views/mailer/new_seller_confirmation.text.haml
+++ b/app/views/mailer/new_seller_confirmation.text.haml
@@ -6,4 +6,4 @@ In the meantime, if you have any questions feel free to contact me directly at a
 = ''
 We look forward to speaking with you,
 = ''
-= render :partial => 'mailer/layouts/text_footer', :locals => {:from => 'Chris', :from_byline => '(& the eHouseOffers Team)'}
+= render :partial => 'mailer/layouts/text_footer', :locals => {:closing => 'Best Regards,', :from => 'Chris Richter'}
