--- a/app/views/mailer/no_sforce_buyer_for_zip.html.haml
+++ b/app/views/mailer/no_sforce_buyer_for_zip.html.haml
@@ -1,2 +1,2 @@
 - body = render :partial => 'no_sforce_buyer_for_zip'
-= render :partial => 'mailer/layouts/html_template', :locals => {:body => body, :closing => 'Best Regards', :from => 'Chris'}
+= render :partial => 'mailer/layouts/html_template', :locals => {:body => body, :closing => 'Best Regards,', :from => 'Chris Richter'}
