--- a/app/views/mailer/_no_sforce_buyer_for_zip.haml
+++ b/app/views/mailer/_no_sforce_buyer_for_zip.haml
@@ -8,4 +8,5 @@
   As a courtesy, you will be updated as soon as a buyer is approved in your area. In the meantime, we hope that you will find our home seller guides on our website useful in achieving a sound and solid offer on your home.
 
 %p
-  = "If you're looking for financial services we recommend the folks at Trinity Credit Services. Numerous home sellers in #{@seller_listing.address.state} (and around the country) have used them with great success."
+  = "Additionally, if you're looking to rebuild your credit we highly recommend #{link_to 'Lexington Law', 'http://www.lexingtonlaw.com/?tid=1934.0.emailPS'}. They're the biggest, most credible credit repair company in the country and numerous home sellers in your area have used them to get back on track.
+
