Replaced abbreviated state with 'in your area'

--- a/app/views/mailer/_new_seller_affiliate_services.haml
+++ b/app/views/mailer/_new_seller_affiliate_services.haml
@@ -1,7 +1,7 @@
 %h1= "Hi #{@seller_listing.user.first_name},"
 
 %p
-  = "60% of home sellers in #{@seller_listing.address.state} could save hundreds, if not thousands, in interest charges by cleaning up their credit. But there are a lot of scams out there and getting started can be daunting. So to help demystify the credit repair process, here are a few recommended steps to follow."
+  = "60% of home sellers in your area could save hundreds, if not thousands, in interest charges by cleaning up their credit. But there are a lot of scams out there and getting started can be daunting. So to help demystify the credit repair process, here are a few recommended steps to follow."
 
 %h2
   1) Hire Someone vs. Do-it-yourself
