--- a/app/views/mailer/new_seller_affiliate_services.text.haml
+++ b/app/views/mailer/new_seller_affiliate_services.text.haml
@@ -1,6 +1,6 @@
 = "Hi #{@seller_listing.user.first_name},"
 = ''
-= "60% of home sellers in #{@seller_listing.address.state} could save hundreds, if not thousands, in interest charges by cleaning up their credit. But there are a lot of scams out there and getting started can be daunting. So to help demystify the credit repair process, here are a few recommended steps to follow."
+= "60% of home sellers in your area could save hundreds, if not thousands, in interest charges by cleaning up their credit. But there are a lot of scams out there and getting started can be daunting. So to help demystify the credit repair process, here are a few recommended steps to follow."
 = ''
 1) Hire Someone vs. Do-it-yourself
 Whether you should hire a credit repair firm or do-it-yourself depends on your willingness to work, as well as your ability to be organized and follow through on the process. If you're not a finance expert and you don't want to deal with handling the detail work yourself, there might be an advantage to hiring a professional.
