Removed bone-headed display of js comments

--- a/app/views/seller_listings/homeoffer2.haml
+++ b/app/views/seller_listings/homeoffer2.haml
@@ -12,7 +12,7 @@
 -# https://ehouseoffers.fogbugz.com/default.asp?31
 - if Rails.env.production?
   :plain
-    /* AdWords Tracking Code */
+    <!-- AdWords Tracking Code -->
     <script type="text/javascript">
     /* <![CDATA[ */
     var google_conversion_id = 1019442295;
@@ -34,5 +34,5 @@
     </div>
     </noscript>
 
-    /* Bing PPC Tracking Code */
+    <!-- Bing PPC Tracking Code -->
     <script type="text/javascript">if (!window.mstag) mstag = {loadTag : function(){},time : (new Date()).getTime()};</script> <script id="mstag_tops" type="text/javascript" src="//flex.atdmt.com/mstag/site/e29ce228-c9b2-4fb3-b412-e36ce70c76a8/mstag.js"></script> <script type="text/javascript"> mstag.loadTag("conversion", {cp:"5050",dedup:"1"})</script> <noscript> <iframe src="//flex.atdmt.com/mstag/tag/e29ce228-c9b2-4fb3-b412-e36ce70c76a8/conversion.html?cp=5050&dedup=1" frameborder="0" scrolling="no" width="1" height="1" style="visibility:hidden; display:none"> </iframe> </noscript>
