Fixed the lexingtonlaw.com affiliate link

--- a/app/views/mailer/_new_seller_affiliate_services.haml
+++ b/app/views/mailer/_new_seller_affiliate_services.haml
@@ -22,7 +22,7 @@
 
 %center
   - lex_logo = image_tag_url 'email/credit_repair_lexington.png', :alt => 'Lexington Law: Free Consultation from the Credit Professionals'
-  = link_to lex_logo, 'http://www.lexingtonlaw.com/?tid=1934.0.email'
+  = link_to lex_logo, 'https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.email'
 
 %br
 %h2
