--- a/app/views/mailer/new_seller_affiliate_services.text.haml
+++ b/app/views/mailer/new_seller_affiliate_services.text.haml
@@ -11,7 +11,7 @@ Whether you should hire a credit repair firm or do-it-yourself depends on your w
 2) Use a Reputable Company
 Finding a loan with poor credit isn't hard, getting a decent interest rate can be. At eHouseOffers we recommend Lexington Law because they're reputable, knowledgeable & they've helped thousands of home sellers.  
 = ''
-You can find Lexington Law at http://www.lexingtonlaw.com/?tid=1934.0.email
+You can find Lexington Law at https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.email
 = ''
 3) Be Informed & Have a Plan 
 Whether you hire someone or do-it-yourself, we strongly recommend that you learn what you need to do to repair your credit legally so that you can qualify for low rate loans and credit cards.
