--- a/app/views/mailer/no_sforce_buyer_for_zip.text.haml
+++ b/app/views/mailer/no_sforce_buyer_for_zip.text.haml
@@ -4,6 +4,6 @@
 = ''
 As a courtesy, you will be updated as soon as a buyer is approved in your area. In the meantime, we hope that you will find our home seller guides on our website useful in achieving a sound and solid offer on your home.
 = ''
-= "Additionally, if you're looking to rebuild your credit we highly recommend Lexington Law. They're the biggest, most credible credit repair company in the country and numerous home sellers in your area have used them to get back on track. You can find them at http://www.lexingtonlaw.com/?tid=1934.0.emailPS"
+= "Additionally, if you're looking to rebuild your credit we highly recommend Lexington Law. They're the biggest, most credible credit repair company in the country and numerous home sellers in your area have used them to get back on track. You can find them at https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.emailPS"
 = ''
 = render :partial => 'mailer/layouts/text_footer', :locals => {:closing => 'Best Regards,', :from => 'Chris Richter'}
