--- a/app/views/seller_listings/homeoffer3.haml
+++ b/app/views/seller_listings/homeoffer3.haml
@@ -12,4 +12,4 @@
 
       %div#affiliatesC
         - lex_img = image_tag '/images/affiliate_ads/credit_repair_lexington.png', :alt => 'Need Credit Repair Help? See Lexington Law'
-        = link_to lex_img, 'http://www.lexingtonlaw.com/?tid=1934.0.thankyou', :onclick => "ga_track_page('/vpv/goal/seller-affiliate')"
+        = link_to lex_img, 'https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.thankyou', :onclick => "ga_track_page('/vpv/goal/seller-affiliate')"
