Fixed escaped link in no buyer for zin email

--- a/app/views/mailer/_no_sforce_buyer_for_zip.haml
+++ b/app/views/mailer/_no_sforce_buyer_for_zip.haml
@@ -8,5 +8,5 @@
   As a courtesy, you will be updated as soon as a buyer is approved in your area. In the meantime, we hope that you will find our home seller guides on our website useful in achieving a sound and solid offer on your home.
 
 %p
-  = "Additionally, if you're looking to rebuild your credit we highly recommend #{link_to 'Lexington Law', 'https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.emailPS'}. They're the biggest, most credible credit repair company in the country and numerous home sellers in your area have used them to get back on track."
+  = "Additionally, if you're looking to rebuild your credit we highly recommend #{link_to 'Lexington Law', 'https://www.lexingtonlaw.com/SecureSignUp/?tid=1934.0.emailPS'}. They're the biggest, most credible credit repair company in the country and numerous home sellers in your area have used them to get back on track.".html_safe
 
