--- a/app/views/seller_listings/homeoffer2.haml
+++ b/app/views/seller_listings/homeoffer2.haml
@@ -24,11 +24,11 @@
 
     /* ]]> */
     </script>
-    <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
     </script>
     <noscript>
     <div style="display:inline;">
-    <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1019442295/?value=$69&amp;label=ChwSCLXIxwEQ9-iN5gM&amp;guid=ON&amp;script=0"/>
+    <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/1019442295/?value=$69&amp;label=ChwSCLXIxwEQ9-iN5gM&amp;guid=ON&amp;script=0"/>
     </div>
     </noscript>
 
