Changed gaudy bg green to a more subdued green

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -1,7 +1,7 @@
 /* See the very bottom for (more) @imports */
 @import "helpers";
 
-html { background : url(/images/bg.png) repeat-x scroll 0 0 #b4d66a; }
+html { background : url(/images/bg.png) repeat-x scroll 0 0 #bcd295; }
 body {
     margin : auto;
     width  : 953px;
