--- a/app/views/blogs/show.haml
+++ b/app/views/blogs/show.haml
@@ -7,7 +7,7 @@
 
 %hr#top_of_content.space
 
-= admin_area do
+= editor_area do
   = link_to "Edit This Article", construct_blog_path(@blog, :edit)
   \|
   = link_to "Create New Guide", construct_blog_path(@blog, :new)
