--- a/app/views/spotlights/show.html.haml
+++ b/app/views/spotlights/show.html.haml
@@ -3,7 +3,7 @@
   
 %hr#top_of_content.space
 
-= admin_area do
+= editor_area do
   = link_to "Create New Spotlight", new_spotlight_path
   \| 
   = link_to "Edit Spotlight", edit_spotlight_path(@spotlight) 
